<resources>
    <string name="app_name">Firabase_auth</string>
    <string name="sign_in">Sign In</string>
    <string name="email_hint">Enter Your Email</string>
    <string name="password_hint">Enter Your Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_here">New here ?</string>
    <string name="already_registered">Already Registered ?</string>
    <string name="facebook_app_id">373902704398101</string>
    <string name="fb_login_protocol_scheme">fb373902704398101</string>
</resources>