<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="activities.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_large">

        <ImageView
            android:id="@+id/logoSignUp"
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:src="@drawable/sign_up_logo">
        </ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:gravity="center_horizontal"
        >

        <EditText
            android:id="@+id/editText_email"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress">

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xsmall"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword">

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_xsmall"
        >
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_sign_up"
            android:layout_width="@dimen/button_width"
            app:cornerRadius="8dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:backgroundTint="@color/blue"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_xxsmall">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_registered"
            android:textStyle="bold"
            android:textSize="@dimen/text_size"
            />

        <TextView
            android:id="@+id/textView_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_xxxsmall"
            android:text="@string/sign_in"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            android:textSize="@dimen/text_size"
            />

    </LinearLayout>

</LinearLayout>